add contact page

--- a/scss/layout/_email.scss
+++ b/scss/layout/_email.scss
@@ -39,6 +39,7 @@
     
      @media (max-width:650px) {
         flex-direction: column;
+        gap: 20px;
       }
     input {
       max-width: 635px;
